<resources>
    <string name="app_name">Music Finder</string>

    <string name="head_track">Track</string>
    <string name="head_album">Album</string>
    <string name="head_artist">Artist</string>
    <string name="head_top_artist">Top Artist</string>
    <string name="head_top_songs">Top Songs</string>
    <string name="enter_track">Enter the name of a song..</string>
    <string name="search">Go</string>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
